--- a/services.html
+++ b/services.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-<!-- ▸▸ NAVBAR (same as other pages) -->
-<header class="glass-nav" id="mainNav">
+<!-- ▸ NAVBAR (same) -->
+<header class="glass-nav">
   <div class="nav-wrap container">
     <a href="index.html" class="logo">Activate<span>Ed</span></a>
 
-    <nav class="desktop-nav" id="mainNav">
+    <nav class="desktop-nav">
       <a href="index.html">Home</a>
-      <a href="services.html" class="active">Services</a>
+      <a class="active" href="services.html">Services</a>
       <a href="impact.html">Impact</a>
       <a href="stories.html">Stories</a>
       <a href="contact.html">Contact</a>
@@ -26,66 +26,83 @@
   </div>
 </header>
 
-<!-- ▸▸ HERO SIMPLE -->
+<!-- ▸ HERO SIMPLE -->
 <section class="hero-simple section">
   <div class="container">
     <h1 class="section-title">Our Services</h1>
-    <p class="subhead">Explore our tailored programs designed to unlock your child’s full potential.</p>
+    <p class="subhead">Tailored programs to unlock every learner’s full potential.</p>
   </div>
 </section>
 
-<!-- ▸▸ SERVICES GRID -->
+<!-- ▸ DETAILED SERVICES GRID -->
 <section class="section">
   <div class="container grid cards">
 
-    <!-- Card 1 -->
-    <article class="card pop">
-      <img src="images/testprep.png" alt="">
-      <h3>Elite College Test Prep</h3>
-      <p>Comprehensive PSAT, SAT &amp; ACT preparation with personalized study plans, practice exams, and expert feedback.</p>
-      <a href="#" class="btn ghost">Learn More →</a>
-    </article>
-
-    <!-- Card 2 -->
+    <!-- Active Learning -->
     <article class="card pop">
       <img src="images/activelearning.png" alt="">
-      <h3>Active Learning Labs</h3>
-      <p>Hands-on workshops in STEM, reading, and writing that make learning engaging and effective after school or on weekends.</p>
-      <a href="#" class="btn ghost">Learn More →</a>
+      <h3>Active Learning</h3>
+      <p>
+        With a focus on kinesthetic, multi-sensory learning, we make education fun and memorable
+        through movement, interaction and creativity. Students earn “tickets” for effort and can
+        trade them for prizes—building confidence, sparking curiosity, and fostering a lifelong love
+        of learning.
+      </p>
+      <a href="contact.html" class="btn ghost">Get Started →</a>
     </article>
 
-    <!-- Card 3 -->
+    <!-- Middle School Mastery -->
     <article class="card pop">
       <img src="images/middle_school.png" alt="">
       <h3>Middle School Mastery</h3>
-      <p>Targeted Regents &amp; TACHS prep for grades 6–8, including one-on-one tutoring and small-group intensive courses.</p>
-      <a href="#" class="btn ghost">Learn More →</a>
+      <p>
+        Certified teachers deliver engaging lessons in every subject plus Regents, TACHS, ISEE and
+        SSAT prep. Instruction targets your child’s specific gaps; parents receive regular growth
+        updates and actionable goals.
+      </p>
+      <a href="contact.html" class="btn ghost">Get Started →</a>
     </article>
 
-    <!-- Card 4 -->
+    <!-- High-School Success -->
     <article class="card pop">
       <img src="images/highschool.png" alt="">
       <h3>High-School Success</h3>
-      <p>Personalized academic coaching, Regents review, AP support, and college-application guidance for grades 9–12.</p>
-      <a href="#" class="btn ghost">Learn More →</a>
+      <p>
+        Customized academic coaching across all courses, Regents review and AP exam prep. Sessions
+        build mastery, confidence and strong study habits, while parents stay informed via regular
+        progress reports.
+      </p>
+      <a href="contact.html" class="btn ghost">Get Started →</a>
+    </article>
+
+    <!-- Elite College Test Prep -->
+    <article class="card pop">
+      <img src="images/testprep.png" alt="">
+      <h3>Elite College Test Prep</h3>
+      <p>
+        Boutique PSAT, SAT &amp; ACT prep tailored to each student’s goals. Personalized study
+        plans, full-length practice exams and expert feedback—plus insider strategies and test-day
+        hacks that boost confidence and scores.
+      </p>
+      <a href="contact.html" class="btn ghost">Get Started →</a>
     </article>
 
   </div>
 </section>
 
-<!-- ▸▸ FOOTER -->
+<!-- ▸ FOOTER -->
 <footer class="footer">
   <div class="footer-inner container">
-    <span>&copy; 2025 Activate Ed</span>
-
+    <span>© 2025 Activate Ed</span>
     <ul class="socials">
-      <li><a href="#"><img src="images/x-logo.png"        alt="X (Twitter)"></a></li>
-      <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
+      <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
+      <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
       <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
     </ul>
   </div>
 </footer>
 
+<!-- JS -->
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
