--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 
     <!-- Middle School Mastery -->
     <article class="card pop">
-      <img src="images/middle_school.png" alt="">
+      <img src="images/middle school.png" alt="">
       <h3>Middle School Mastery</h3>
       <p>
         Certified teachers deliver engaging lessons in every subject plus Regents, TACHS, ISEE and
