--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="container footer-inner">
       <div>© 2025 ActivateEd</div>
       <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png" alt="X"></a></li>
+        <li><a href="#"><img src="images/X_logo.png" alt="X"></a></li>
         <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
