--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div>© 2025 ActivateEd</div>
       <ul class="socials">
         <li><a href="#"><img src="images/X_logo.png" alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/images/Facebook_Logo_(2019).png.png" alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
