--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
         <button type="submit" class="btn primary large">Send Message</button>
       </form>
       <div class="contact-info" style="margin-top:2rem; text-align:center;">
-        <p>Or email us directly at <a href="mailto:info@activateedu.com">info@activateedu.com</a></p>
-        <p>Call: <a href="tel:123-456-7890">123‑456‑7890</a></p>
+        <p>Or email us directly at <a href="mailto:info@activateedu.com">info@activateedwestchester.com</a></p>
+        <p>Text: <a href="tel:914-712-5393">914-712-5393</a></p>
       </div>
     </div>
   </section>
