--- a/contact.html
+++ b/contact.html
@@ -3,89 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — Activate Education</title>
+  <title>Our Work | ActivateEd</title>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap" rel="stylesheet" />
+  <!-- Swiper (still needed elsewhere) -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css"/>
 
-  <!-- Main stylesheet -->
+  <!-- Main CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Header -->
+  <!-- ▸ NAV -->
   <header class="glass-nav">
-    <div class="nav-wrap">
-      <a class="brand" href="index.html">Activate<span>Ed</span></a>
-      <nav class="desktop-nav" id="mainNav">
+    <div class="nav-wrap container">
+      <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
+      <button id="burger" aria-label="Menu"><span></span></button>
+
+      <nav class="desktop-nav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="impact.html">Impact</a>
         <a href="stories.html">Stories</a>
-        <a href="contact.html" class="active">Contact</a>
+        <a class="active" href="contact.html">Gallery</a>
       </nav>
-      <button id="themeToggle" aria-label="theme"></button>
-      <button id="burger" aria-label="Menu"><span></span></button>
+
+      <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
 
-  <!-- Contact Hero Banner -->
-  <section class="section hero-simple">
+  <!-- ▸ HERO -->
+  <section class="hero-simple reveal">
     <div class="container">
-      <h1 class="section-title">Get in Touch</h1>
-      <p class="subhead">
-        Have questions or want to learn more? Send us a message and we'll get back to you soon.
-      </p>
+      <h1 class="section-title">Learning in Action</h1>
+      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
     </div>
   </section>
 
-  <!-- Contact Form -->
-  <section class="section contact">
-    <div class="container narrow">
-      <form class="contact-form" id="cForm" action="mailto:info@activateedu.com" method="POST" novalidate>
-        <div class="field">
-          <input type="text" id="fName" name="name" required />
-          <label for="fName">Name</label>
-        </div>
-        <div class="field">
-          <input type="email" id="fEmail" name="email" required />
-          <label for="fEmail">Email</label>
-        </div>
-        <div class="field">
-          <textarea id="fMsg" name="message" rows="5" required></textarea>
-          <label for="fMsg">Your Message</label>
-        </div>
-        <button type="submit" class="btn primary large">Send Message</button>
-      </form>
-      <div class="contact-info" style="margin-top:2rem; text-align:center;">
-        <p>Or email us directly at <a href="mailto:info@activateedu.com">info@activateedwestchester.com</a></p>
-        <p>Text: <a href="tel:914-712-5393">914-712-5393</a></p>
-      </div>
+  <!-- ▸ IMAGE GALLERY -->
+  <section class="section">
+    <div class="container gallery-grid">
+      <!-- Replace the src filenames with your own images -->
+      <figure>
+        <img src="images/kids1.jpg" alt="Hands-on math activity" />
+        <figcaption>Building fraction towers to master ratios.</figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/kids2.jpg" alt="STEM experiment" />
+        <figcaption>Testing homemade circuits in our STEM lab.</figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/kids3.jpg" alt="Reading session" />
+        <figcaption>Guided reading—breaking down plot &amp; theme.</figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/kids4.jpg" alt="Collaborative writing" />
+        <figcaption>Peer-reviewing persuasive essays.</figcaption>
+      </figure>
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- ▸ FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© 2025 Activate Education. All rights reserved.</p>
-     <ul class="socials">
-        <li><a href="#"><img src="images/X_logo.png"        alt="X (Twitter)"></a></li>
-        <li><a href="#"><img src="images/Facebook_Logo_(2019).png" alt="Facebook"></a></li>
+      <div>© 2025 ActivateEd</div>
+      <ul class="socials">
+        <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
   </footer>
 
-  <!-- Back-to-Top -->
-  <button id="toTop" aria-label="Back to top">↑</button>
-
-  <!-- Vendor JS -->
+  <!-- Vendor JS (kept for consistency) -->
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>      <!-- NEW -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> <!-- NEW -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <!-- Main JS -->
   <script src="script.js"></script>
