--- a/contact.html
+++ b/contact.html
@@ -43,22 +43,22 @@
     <div class="container gallery-grid">
       <!-- Replace the src filenames with your own images -->
       <figure>
-        <img src="images/10000006998.jpg" alt="Hands-on math activity" />
+        <img src="images/10000006998.png" alt="Hands-on math activity" />
         <figcaption>Building fraction towers to master ratios.</figcaption>
       </figure>
 
       <figure>
-        <img src="images/10000006999.jpg" alt="STEM experiment" />
+        <img src="images/10000006999.png" alt="STEM experiment" />
         <figcaption>Testing homemade circuits in our STEM lab.</figcaption>
       </figure>
 
       <figure>
-        <img src="images/10000007000.jpg" alt="Reading session" />
+        <img src="images/10000007000.png" alt="Reading session" />
         <figcaption>Guided reading—breaking down plot &amp; theme.</figcaption>
       </figure>
 
       <figure>
-        <img src="images/10000007001.jpg" alt="Collaborative writing" />
+        <img src="images/10000007001.png" alt="Collaborative writing" />
         <figcaption>Peer-reviewing persuasive essays.</figcaption>
       </figure>
     </div>
