--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Work | ActivateEd</title>
+  <title>Gallery&nbsp;| Activate Ed</title>
 
-  <!-- Swiper (still needed elsewhere) -->
+  <!-- Swiper CSS (other pages still use it) -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css"/>
 
-  <!-- Main CSS -->
+  <!-- Main Styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- ▸ NAV -->
+  <!-- ▸ NAVBAR -->
   <header class="glass-nav">
     <div class="nav-wrap container">
       <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
@@ -23,54 +23,41 @@
         <a href="services.html">Services</a>
         <a href="impact.html">Impact</a>
         <a href="stories.html">Stories</a>
-        <a class="active" href="contact.html">Gallery</a>
+        <a class="active" href="gallery.html">Gallery</a>
       </nav>
 
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
 
-  <!-- ▸ HERO -->
+  <!-- ▸ HERO SIMPLE -->
   <section class="hero-simple reveal">
     <div class="container">
       <h1 class="section-title">Learning in Action</h1>
-      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
+      <p class="subhead">Real snapshots from our tutoring sessions&nbsp;&amp;&nbsp;workshops.</p>
     </div>
   </section>
 
-  <!-- ▸ IMAGE GALLERY -->
+  <!-- ▸ IMAGE GALLERY (no captions) -->
   <section class="section">
     <div class="container gallery-grid">
-      <!-- Replace the src filenames with your own images -->
-      <figure>
-        <img src="images/10000006998.png" alt="Hands-on math activity" />
-        <figcaption>Building fraction towers to master ratios.</figcaption>
-      </figure>
 
-      <figure>
-        <img src="images/10000006999.png" alt="STEM experiment" />
-        <figcaption>Testing homemade circuits in our STEM lab.</figcaption>
-      </figure>
+      <!-- Replace filenames with your own images -->
+      <figure><img src="images/kids1.jpg" alt="Hands-on learning"></figure>
+      <figure><img src="images/kids2.jpg" alt="STEM activity"></figure>
+      <figure><img src="images/kids3.jpg" alt="Reading session"></figure>
+      <figure><img src="images/kids4.jpg" alt="Collaborative writing"></figure>
 
-      <figure>
-        <img src="images/10000007000.png" alt="Reading session" />
-        <figcaption>Guided reading—breaking down plot &amp; theme.</figcaption>
-      </figure>
-
-      <figure>
-        <img src="images/10000007001.png" alt="Collaborative writing" />
-        <figcaption>Peer-reviewing persuasive essays.</figcaption>
-      </figure>
     </div>
   </section>
 
   <!-- ▸ FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <div>© 2025 ActivateEd</div>
+      <div>© 2025 Activate Ed</div>
       <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/x-logo.png"        alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
