--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gallery&nbsp;| Activate Ed</title>
 
-  <!-- Swiper CSS (other pages still use it) -->
+  <!-- Swiper CSS (other pages use it) -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css"/>
 
-  <!-- Main Styles -->
+  <!-- Main CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -30,24 +30,21 @@
     </div>
   </header>
 
-  <!-- ▸ HERO SIMPLE -->
+  <!-- ▸ HERO -->
   <section class="hero-simple reveal">
     <div class="container">
       <h1 class="section-title">Learning in Action</h1>
-      <p class="subhead">Real snapshots from our tutoring sessions&nbsp;&amp;&nbsp;workshops.</p>
+      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
     </div>
   </section>
 
-  <!-- ▸ IMAGE GALLERY (no captions) -->
+  <!-- ▸ IMAGE-ONLY GALLERY -->
   <section class="section">
     <div class="container gallery-grid">
-
-      <!-- Replace filenames with your own images -->
-      <figure><img src="images/kids1.jpg" alt="Hands-on learning"></figure>
-      <figure><img src="images/kids2.jpg" alt="STEM activity"></figure>
-      <figure><img src="images/kids3.jpg" alt="Reading session"></figure>
-      <figure><img src="images/kids4.jpg" alt="Collaborative writing"></figure>
-
+      <figure><img src="images/1000006998.png" alt=""></figure>
+      <figure><img src="images/1000007000.png" alt=""></figure>
+      <figure><img src="images/1000006999.png" alt=""></figure>
+      <figure><img src="images/1000007001.png" alt=""></figure>
     </div>
   </section>
 
